[gd_scene load_steps=30 format=2]

[ext_resource path="res://entities/Player.gd" type="Script" id=1]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCIdle0.png" type="Texture" id=2]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCIdle1.png" type="Texture" id=3]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCIdle2.png" type="Texture" id=4]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCRun1.png" type="Texture" id=5]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCRun2.png" type="Texture" id=6]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCRun3.png" type="Texture" id=7]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCRun4.png" type="Texture" id=8]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCRun5.png" type="Texture" id=9]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCAttack01.png" type="Texture" id=10]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCAttack02.png" type="Texture" id=11]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCAttack03.png" type="Texture" id=12]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCAttack04.png" type="Texture" id=13]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCAttack05.png" type="Texture" id=14]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo2_01.png" type="Texture" id=15]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo2_02.png" type="Texture" id=16]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo2_03.png" type="Texture" id=17]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo2_04.png" type="Texture" id=18]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo2_05.png" type="Texture" id=19]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo2_06.png" type="Texture" id=20]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo01.png" type="Texture" id=21]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo02.png" type="Texture" id=22]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo03.png" type="Texture" id=23]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo04.png" type="Texture" id=24]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo05.png" type="Texture" id=25]
[ext_resource path="res://assets/art/Main Character/PLACEHOLDER_MCCombo06.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ), ExtResource( 8 ), ExtResource( 9 ) ],
"loop": true,
"name": "run",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ) ],
"loop": false,
"name": "combo2",
"speed": 10.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ), ExtResource( 25 ), ExtResource( 26 ) ],
"loop": false,
"name": "combo1",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 33.0271
height = 20.5319

[node name="Player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="IdleAnimation" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 1 )
animation = "idle"
__meta__ = {
"_edit_lock_": true
}

[node name="AttackAnimation" type="AnimatedSprite" parent="."]
scale = Vector2( 3, 3 )
frames = SubResource( 3 )
animation = "combo2"
frame = 2
__meta__ = {
"_edit_lock_": true
}

[node name="IdleCollisionBox" type="CollisionShape2D" parent="."]
position = Vector2( -2.53876, 6.90269 )
shape = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="Attack1CollisionBox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -31.6323, 49.7877, -26.0147, 54.8242, 2.07346, 35.2594, 4.01057, 40.6833, 13.3087, 43.5889, 18.1515, 54.2431, 23.7691, 54.6305, 20.8634, 43.2015, 35.7792, 42.8141, 36.9415, 39.3273, 43.9151, 40.6833, 46.0459, 36.6153, 49.9201, 37.1965, 51.6635, 34.2908, 54.9566, 34.2908, 54.3755, 31.9663, 56.7, 30.6103, 57.8623, 28.2858, 60.3806, 28.2858, 60.768, 25.7675, 64.2548, 23.8304, 63.8674, 22.2807, 66.5793, 22.2807, 65.8045, 15.8882, 69.6787, 16.2757, 69.6787, 6.59009, 72.1969, 6.00895, 72.9718, -17.2364, 69.485, -19.1735, 69.485, -26.7283, 66.5793, -28.0842, 66.5793, -32.927, 64.2548, -34.0147, 64.2548, -38.0826, 61.7365, -36.9204, 61.1554, -41.3757, 58.8309, -40.2135, 58.056, -43.894, 55.9252, -42.1506, 54.1818, -46.2185, 52.6321, -45.8311, 49.9201, -50.0927, 45.2711, -48.3493, 44.4962, -52.4173, 37.5226, -50.6739, 37.1352, -53.7732, 11.3716, -53.967, 11.3716, -51.6424, 2.46088, -52.2236, 2.46088, -50.0927, -7.22469, -49.1242, -6.44984, -43.3128, -10.1304, -42.538, -9.93665, -38.8575, -1.60706, -38.2763, 13.5024, -22.392, 8.07851, -21.4235, 13.6961, -13.675, 9.04706, -14.8373, 5.17284, -10.1882, 7.49738, -5.15171, -4.12531, 5.50241, -6.25613, 9.76405, -12.4549, 16.1565, -11.4863, 19.0622, -24.0776, 31.266, -13.4234, 33.2031, -22.1405, 41.7264 )
__meta__ = {
"_edit_lock_": true
}

[node name="Combo1CollisionBox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( -43.4755, 42.4801, -27.6217, 27.637, -28.3542, 24.9511, -21.3952, 19.9456, -22.6161, 18.1143, -25.5462, 18.1143, -28.11, 21.2885, -32.0168, 21.2885, -33.8481, 21.2885, -32.7493, 16.6492, -36.534, 15.0621, -44.4696, 6.02772, -45.4463, 3.95225, -25.0578, 2.48721, -22.2498, 4.92894, -20.2965, 1.99887, -8.94243, 2.24304, -8.45409, 5.78354, -1.73933, 5.41728, 2.77786, -1.9079, 1.80118, -7.2797, 15.1086, -7.15762, 16.2074, -3.98337, 21.2129, -3.98337, 21.7013, -1.29747, 25.1197, 2.48721, 25.1197, 8.46944, 21.9454, 13.5971, 27.6835, 18.4805, 27.6835, 27.8812, 17.4282, 28.0033, 16.8178, 22.3873, 12.6669, 21.899, 13.2773, 27.5149, 9.73679, 28.1254, 9.85887, 28.98, 12.789, 29.8346, 12.3006, 31.2996, 3.75456, 30.2008, 2.16743, 26.4161, -0.884727, 30.5671, -12.2388, 29.4683, -10.1633, 24.9511, -8.332, 21.7769, -10.5296, 19.4572, -17.2443, 28.3695, -17.2443, 32.7646, 22.9221, 33.253, 24.6313, 29.1021, 28.5381, 30.3229, 30.1252, 27.637, 29.8811, 25.8057, 31.9565, 25.8057, 31.9565, 20.6781, 35.0087, 20.6781, 35.0087, 14.2075, 37.9388, 14.0854, 37.9388, 5.17311, 40.3805, 5.17311, 40.9909, -5.27867, 37.9388, -5.27867, 37.8167, -10.6505, 35.1308, -10.7726, 34.6424, -13.5805, 31.9565, -13.7026, 31.7123, -20.0511, 25.7301, -20.0511, 25.7301, -22.6149, 22.9221, -23.1033, 22.5559, -25.4229, 17.062, -26.0334, 16.8178, -28.8413, 11.3239, -28.8413, 10.8356, -33.7248, 35.8633, -34.2132, 37.5725, -30.3064, 45.4577, -30.9168, 45.4577, -27.9867, 48.5098, -27.9867, 48.5098, -25.6671, 51.562, -25.0567, 51.562, -22.737, 54.6142, -22.1266, 54.6142, -19.929, 57.3001, -18.9523, 57.3001, -16.8769, 60.9627, -15.9002, 60.9627, -13.2143, 63.7706, -12.7259, 64.1369, -4.54615, 66.8228, -2.95903, 66.5786, 20.9699, 63.5265, 22.557, 63.5265, 30.981, 61.0847, 30.8589, 61.0847, 33.789, 58.1547, 33.789, 58.1547, 36.8411, 55.713, 36.9632, 54.7363, 40.0154, 51.8062, 40.0154, 51.8062, 42.213, 48.9982, 42.9455, 48.9982, 45.6314, 45.824, 45.9976, 45.824, 49.0498, 37.0337, 49.0498, 36.7896, 51.7357, 30.4411, 51.8578, 30.4411, 54.7878, -3.37688, 55.032, -4.59774, 51.7357, -23.3991, 51.7357, -23.277, 54.5437, -30.6021, 54.4216, -31.0905, 49.0498, -43.7875, 49.0498 )
__meta__ = {
"_edit_lock_": true
}

[node name="ComboTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="CollisionTimer" type="Timer" parent="."]

[node name="Combo2CollisionBox" type="CollisionPolygon2D" parent="."]
polygon = PoolVector2Array( 10.7127, 49.0883, 11.7617, 51.1862, 18.5798, 51.361, 19.1043, 48.389, 30.4679, 49.0883, 31.1672, 45.2421, 42.7056, 46.1163, 43.4049, 42.2701, 50.223, 43.4939, 51.7964, 40.1722, 60.3628, 40.1722, 60.8873, 36.6757, 66.8313, 36.6757, 66.8313, 34.2282, 68.9292, 34.2282, 69.6285, 31.2562, 73.125, 31.2562, 73.125, 28.1093, 74.3488, 28.1093, 75.2229, 27.7597, 75.0481, 14.1234, 72.6006, 14.1234, 72.6006, 10.9765, 67.0062, 11.501, 67.0062, 8.00453, 59.8384, 8.87865, 59.8384, 5.73181, 53.0202, 5.73181, 51.272, 2.23532, 46.3769, 2.23532, 46.0272, -0.736692, 40.0832, -0.561867, 39.3839, -3.53388, 30.4679, -3.53388, 30.293, -6.33107, 13.3351, -7.03037, 12.8106, -9.30309, 4.59386, -9.30309, 3.89455, -13.3241, -4.84667, -13.3241, -5.02149, -15.4219, -15.6858, -15.7716, -16.0354, -11.9255, -12.8886, -10.8765, -12.1893, -7.38002, -4.84667, -7.90449, -3.97255, -5.45695, 1.62183, -4.75765, 3.19525, -1.96046, -1.00053, 2.0605, -17.434, 2.41015, -22.1543, 8.17935, -25.1263, 8.35418, -24.7767, 13.2493, -28.9724, 14.2982, -28.9724, 16.2213, -30.7207, 17.2702, -31.0703, 20.0674, -43.1332, 20.0674, -43.1332, 23.2143, -51.8744, 22.6898, -51.8744, 26.8856, -60.4408, 26.1863, -60.4408, 28.6338, -66.5597, 28.9835, -67.0842, 31.9555, -70.5807, 32.4799, -70.231, 35.6268, -66.9093, 37.0254, -65.3359, 39.9974, -55.5458, 40.1722, -54.322, 42.9694, -46.4549, 42.9694, -45.4059, 46.1163, -39.9864, 46.1163, -39.9864, 48.9134, -31.9445, 49.4379, -29.8466, 52.7596, -23.5529, 53.9834, -23.5529, 48.0393 )
__meta__ = {
"_edit_lock_": true
}
[connection signal="animation_finished" from="AttackAnimation" to="." method="_on_AttackAnimation_animation_finished"]
[connection signal="timeout" from="ComboTimer" to="." method="_on_ComboTimer_timeout"]
